--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -46,3 +46,61 @@ h1,h2,h3,h4,h5,h6,p {
   }
   color: var(--emphasis);
 }
+
+.page {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  min-height: 100%;
+}
+
+.innerpage {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  box-sizing: border-box;
+}
+
+input:not([type="submit"]), .input {
+  border: .125rem solid var(--emphasis);
+  background-color: var(--bg2);
+  color: var(--fg1);
+  padding: .5rem;
+  height: 3rem;
+  font-size: .9rem;
+
+  box-sizing: border-box;
+
+  &:active, &:hover, &:focus {
+    background-color: var(--bg3);
+  }
+}
+
+.button, input[type="submit"], button {
+  border: .125rem solid var(--emphasis);
+  background-color: var(--bg2);
+  color: var(--fg1);
+  padding: .5rem;
+  height: 3rem;
+  font-size: .9rem;
+
+  box-sizing: border-box;;
+
+  &:hover, &:focus {
+    background-color: var(--emphasis);
+    color: var(--fg-emphasis);
+  }
+
+  &:active {
+    background-color: var(--emphasis-dark);
+    border-color: var(--emphasis-dark);
+    color: var(--fg-emphasis);
+  }
+}
+
+.error {
+  text-align: center;
+  color: var(--red);
+  font-style: italic;
+}
