Checked it off and checked for existing clients

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -60,6 +60,7 @@ h1,h2,h3,h4,h5,h6,p {
   flex-direction: column;
   padding: 1rem;
   box-sizing: border-box;
+  gap: .5rem;
 }
 
 input:not([type="submit"]), .input {
