Made scroll bars better on non-firefox browsers (checked with chromium) (might go back on the custom styling)

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -25,6 +25,15 @@
 
   font-family: 'Lexend', sans-serif;
   font-optical-sizing: auto;
+
+  &::-webkit-scrollbar {
+    background-color: var(--bg2);
+    width: .75rem;
+    height: .75rem;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--emphasis);
+  }
 }
 
 /* As it should be */
